feat: Add Kafka-based async span collection
- Integrate Apache Kafka (Confluent CP) for async message processing
- Services publish spans to 'span-events' topic via KafkaTemplate
- Tracer-backend consumes spans and persists to Postgres
- Configure JSON deserialization for multi-module compatibility
- Add Docker Compose setup for Kafka (KRaft mode, no Zookeeper)

Services can now send spans asynchronously without blocking HTTP requests.